styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  --scroll-behavior: smooth!important;
  scroll-behavior: smooth!important;
}

body {
  background-color: #1F2125;
  color: white;
}

.main-hero {
  margin-top: 15vh;
  width: 100vw;
}

.custom-divider {
  margin-top: 3vh;
  margin-bottom: 4vh;
}

/*.hero-img {*/
/*  position: absolute;*/
/*  border-radius: 10px;*/
/*  z-index: 20;*/
/*}*/

.hero-img-box {
  position: relative;
}

.hero-text-box {
  display: flex;
  flex-direction: column;
}

.g-heading {
  color: #7ECB7C;
  font-style: normal;
  font-size: clamp(1.5rem, 9vw, 6rem);
  line-height: 121px;
  white-space: nowrap;
  align-self: flex-end;
}

.project-heading {
  color: #7ECB7C;
  font-style: normal;
  font-size: 2.5rem;
  font-weight: 600;
  margin: 1rem 0;
}

.project-sub-heading {
  display: flex;
  align-items: center;
  color: #9ABFEA;
  font-size: clamp(1rem, 4.5vw, 1.5rem);
  font-style: normal;
  font-weight: 600;
  line-height: normal; 
  white-space: nowrap;
}

.project-sub-text {
  color: #EDE490;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  line-height: normal; 
}

.sub-heading {
  font-style: normal;
  font-size: clamp(1.5rem, 8vw, 4rem);
  line-height: 50px;
  color: #9ABFEA;
}

.nav-heading {
  font-style: normal;
  font-size: 40px;
  line-height: 50px;
  color: #EDE490;
}

.nav-link {
  display: inline-flex;
  font-style: normal;
  font-size: 16px;
  line-height: 20px;
  color: #EDE490;
  /* border: 1px solid #EDE490;
  border-radius: 9999px; */
  padding: .5rem 1rem;
  margin-top: 1rem;
}

.nav-link:hover {
  color:#9e6ed4;
  transition-duration: .5s;
  border-color: #9e6ed4;
}

.link-container {
  display: flex;
  align-items: flex-end;
  padding-left: 2vw;
  min-height: 16rem;
}

.link-box {
  display: inline-flex;
  flex-direction: column;
  justify-self: end;
}

.small-divider {
  height: 1px;
  width: 100vw;
  background-color: gray;
}

.project-section {
  margin-top: 30vh;
  margin-left: 5vw;
  margin-right: 5vw;
  margin-bottom: 10vh;
}

.project-block {
  padding-top: 5vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  width: 25vw;
  min-height: 30vh;
}

.project-img {
  width: 30vw;
  height: 35vh;
  border-radius: 10px;
  background-color: black;
}

.link-img {
  display: flex;
  justify-content: end;
}

.main-footer {
  background-color: #2B2E33;
}

@media screen and (max-width: 420px) {
  /*.g-heading {*/
  /*  font-style: normal;*/
  /*  font-size: 24px;*/
  /*  line-height: normal;*/
  /*  white-space: normal;*/
  /*  align-self: center;*/
  /*}*/
}

@media screen and (max-width: 600px) {

  .g-heading {
    font-style: normal;
    line-height: normal;
    white-space: normal;
    align-self: center;
  }

  .main-hero {
    margin-top: 7vh;
    text-align: center;
  }

  .project-img {
    width: 80vw;
    height: 35vh;
  }

  .project-sub-text {
    font-size: .7rem;
  }

  .spacer-dot {
    display: none;
  }

  .link-container {
    display: none;
  }

  .project-section {
    margin-top: 15vh;
  }
}

@media screen and (max-width: 1280px) {

  .link-box {
    flex-direction: row;
  }

  .link-container {
    align-items: center;
  }
}

